fix upcoming event description spacing, test upcoming event link

--- a/themes/cnh/sass/_front-page.scss
+++ b/themes/cnh/sass/_front-page.scss
@@ -161,7 +161,7 @@
 
   .hover-details {
     display: none;
-    padding: 2rem;
+    padding-left: 1rem;
     border: 1px solid #282460;
     border-radius: 0 10px 10px 0;
     margin-left: 0;
